<resources>
    <string name="app_name">SimpleAndroidApp</string>
    <string name="show_activity">Show Activity</string>
    <string name="send_button_text">Share</string>
    <string name="input_message_hint">Type your message here …</string>
    <string name="key_message">message</string>
    <string name="hello_text">Hello from Android App</string>
    <string name="cats_button_text">Cats</string>
    <string name="layout_test">Layout Test</string>
    <string name="magic_images"><![CDATA[<---- magic images :)]]></string>
    <string name="text_like_button">Text Like Button</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim add</string>
    <string name="my_super_title">My Super Title</string>
    <string name="threads">Threads</string>
    <string name="button_text_asynctask_activity">Asynctask Activity</string>
    <string name="button_text_threads_activity">Threads Activity</string>
    <string name="create">Create</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="network">Network</string>

    <string name="action_search">Search</string>
    <string name="error_with_code">Error with code: %d</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="searching">Searching…</string>
    <string name="search">Search</string>
</resources>
